元宵佳节的布局

--- a/festival.html
+++ b/festival.html
@@ -40,7 +40,17 @@
             </section>
             <!-- 第四屏 -->
             <section class="swiper-slide page4">
-                
+                <div class="poem">
+                    <p>愿您羊年运旺福旺</p>
+                    <p>条条祝福给您送上</p>
+                    <p>美丽花灯传递吉祥</p>
+                    <p>圆圆汤圆味道芬芳</p>
+                </div>
+                <div class="fes-tit">
+                    元<br>宵<br>节
+                </div>
+                <img src="./src/assets/festival/flower.png" class="flower">
+                <img src="./src/assets/festival/s1.png" class="s1">
             </section>
         </div>
         <img src="./src/assets/festival/web-swipe-tip.png" class="ani-arrow"> 
