--- a/news.html
+++ b/news.html
@@ -7,8 +7,7 @@
     <title>腾讯新闻</title>
 </head>
 <body>
-    <header>
-        <div class="top"></div>
+    <header class="news-header">
         <div class="swiper-wrapper header-swiper">
             <div class="swiper-slide">新闻</div>
             <div class="swiper-slide">财经</div>
