--- a/news.html
+++ b/news.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>腾讯新闻</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Swiper中文网基础演示(www.swiper.com.cn)</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 </head>
+
 <body>
-    <header class="news-header">
-        <div class="swiper-wrapper header-swiper">
+    <div class="top-header swiper-container">
+        <div class="top-line"></div>
+        <div class="swiper-wrapper">
             <div class="swiper-slide">新闻</div>
             <div class="swiper-slide">财经</div>
             <div class="swiper-slide">娱乐</div>
@@ -18,8 +20,8 @@
             <div class="swiper-slide">空间</div>
             <div class="swiper-slide">书城</div>
         </div>
-    </header>
-    <section class="focus swiper-container">
+    </div>
+    <div class="banner swiper-container">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <img src="./src/assets/news/0.jpg">
@@ -31,6 +33,72 @@
             </div>
         </div>
         <div class="pagination"></div>
-    </section>
+    </div>
+    <div id="announcement" class="swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <a href="#">女博士相亲角被嘲？其实是有“预谋”的行为艺术</a>
+            </div>
+            <div class="swiper-slide">
+                <a href="#">你为什么还没过上你想要的生活</a>
+            </div>
+            <div class="swiper-slide">
+                <a href="#">莲花粉橙色也太美了！连直男都爱的仙女色！</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="tabs">
+        <a href="#" class="active">新闻</a>
+        <a href="#">社会</a>
+        <a href="#">娱乐</a>
+    </div>
+    <div id="tabs-container" class="swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <ul class="news-list">
+                    <li>女子强行阻拦高铁发车 称其丈夫没上车</li>
+                    <li>小马奔腾创始人妻子被判赔2亿债务</li>
+                    <li>杭州女子将200平荒地改造成“秘密花园”</li>
+                    <li>“紫光阁饭店”事件，乌龙背后是热搜的生意</li>
+                    <li>最美乘务员冒雪挨个扶旅客下火车</li>
+                    <li>五月天周杰伦再度合体</li>
+                    <li>张馨予被赞模特身材</li>
+                    <li>惊呆，杨紫的脸现在跟脖子一样宽了！</li>
+                    <li>睡姿暴露你偷情指数</li>
+                    <li>济南小伙儿自掏腰包，为陌生农民工加菜</li>
+                </ul>
+            </div>
+            <div class="swiper-slide">
+                <ul class="news-list">
+                    <li>女子街边卖早餐卖蓝色油条生意火爆</li>
+                    <li>保定励志哥！坐着轮椅唱歌成网红</li>
+                    <li>电影院保安恋上女研究生</li>
+                    <li>19岁女生保送北大直博</li>
+                    <li>男子越狱期间强奸女友12岁的女儿</li>
+                    <li>8旬爷爷因三个孩子都不赡养</li>
+                    <li>7座面包车塞进20名学生</li>
+                    <li>老人做家务时羽绒服突然“爆炸”</li>
+                    <li>直播间里，用歌舞抗癌的70岁“网红”</li>
+                    <li>PG_ONE粉丝买热搜"紫光阁地沟油"</li>
+                </ul>
+            </div>
+            <div class="swiper-slide">
+                <ul class="news-list">
+                    <li>“绿帽门”后贾乃亮深夜买醉</li>
+                    <li>姚笛大方挥手无名指戒指抢眼</li>
+                    <li>汪小菲被大S减肥成果吓到</li>
+                    <li>Baby和秀智同穿18万仙女裙</li>
+                    <li>易烊千玺得罪粉丝？接机时粉丝不想理他</li>
+                    <li>Tara成员：送了跑车还有90亿</li>
+                    <li>蒋欣在节目上的表情超有戏</li>
+                    <li>李小璐最新写真曝光，大走稳重的知性风</li>
+                    <li>马思纯和欧豪穿同款秀恩爱</li>
+                    <li>第90届奥斯卡颁奖礼发海报</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
