每日优鲜的footer

--- a/fresh.html
+++ b/fresh.html
@@ -48,6 +48,7 @@
             </div>
         </div>
     </div>
+    <div class="img" id="footer"><img src="./src/static/fresh/images/footer.png"></div>
 </body>
 
 </html>
