--- a/fresh.html
+++ b/fresh.html
@@ -48,6 +48,109 @@
             </div>
         </div>
     </div>
+    <div id="page" class="swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide slidepage">
+                <div class="swiper-container scroll">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide slidescroll">slide1</div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide slidepage">
+                <div class="swiper-container scroll">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide slidescroll">slide2</div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide slidepage">
+                <div class="swiper-container scroll">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide slidescroll">slide3</div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide slidepage">
+                <div class="swiper-container scroll">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide slidescroll">slide4</div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide slidepage">
+                <div class="swiper-container scroll">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide slidescroll">slide5</div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide slidepage">
+                <div class="swiper-container scroll">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide slidescroll">slide6</div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide slidepage">
+                <div class="swiper-container scroll">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide slidescroll">slide7</div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide slidepage">
+                <div class="swiper-container scroll">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide slidescroll">slide8</div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide slidepage">
+                <div class="swiper-container scroll">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide slidescroll">slide9</div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide slidepage">
+                <div class="swiper-container scroll">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide slidescroll">slide10</div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide slidepage">
+                <div class="swiper-container scroll">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide slidescroll">slide11</div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide slidepage">
+                <div class="swiper-container scroll">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide slidescroll">slide12</div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide slidepage">
+                <div class="swiper-container scroll">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide slidescroll">slide13</div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide slidepage">
+                <div class="swiper-container scroll">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide slidescroll">slide14</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 最外层swiper-wrapper结束 -->
+    </div>
     <div class="img" id="footer"><img src="./src/static/fresh/images/footer.png"></div>
 </body>
 
